WebKit/wx/WebView.h
@@ -149,6 +149,8 @@ protected:
     void OnPaint(wxPaintEvent& event);
     void OnSize(wxSizeEvent& event);
     void OnMouseEvents(wxMouseEvent& event);
+    void OnContextMenuEvents(wxContextMenuEvent& event);
+    void OnMenuSelectEvents(wxCommandEvent& event);
     void OnKeyEvents(wxKeyEvent& event);
     void OnSetFocus(wxFocusEvent& event);
     void OnKillFocus(wxFocusEvent& event);
